# double-wasm-near-arch

./: package-lock.json  package.json
contract/: .gitignore
contract/src/: lib.rs
frontend/: index.html  index.js  near-wallet.js  package-lock.json  package.json  start.sh
frontend/assets/: global.css
integration-tests/src/: tests.rs
wasm-modules/: Cargo.toml
wasm-modules/src/: lib.rs
