[package]
name = "wasm-modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
sha256 = "1.1.3"
to-binary = "0.4.0"
console_error_panic_hook = {git = "https://github.com/rustwasm/console_error_panic_hook"}